--- a/codecov.yml
+++ b/codecov.yml
@@ -18,6 +18,7 @@ comment:
   require_base: false
   require_head: true
   hide_project_coverage: false
+  show_carryforward_flags: true
 
 # When modifying this file, please validate using
 # curl -X POST --data-binary @codecov.yml https://codecov.io/validate
