--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ maintainers = [
 dependencies = [
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
+    "deepagents>=0.1.0",
     "fastapi>=0.116.1",
     "greenlet>=3.2.3",
     "langchain-openai>=0.3.28",
@@ -39,6 +40,7 @@ dependencies = [
     "pyjwt>=2.10.1",
     "python-dotenv>=1.1.1",
     "sqlalchemy>=2.0.0",
+    "tavily-python>=0.3.0",
     "uvicorn>=0.35.0",
     "langfuse>=3.3.4",
 ]
