Fix deepagents version to 0.0.12rc1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ maintainers = [
 dependencies = [
     "alembic>=1.16.4",
     "asyncpg>=0.30.0",
-    "deepagents>=0.1.0",
+    "deepagents>=0.0.12rc1",
     "fastapi>=0.116.1",
     "greenlet>=3.2.3",
     "langchain-openai>=0.3.28",
